styles/styles.css
@import '_presets';

/* 
Layout 
--------------------------------*/
.main-layout {
  @apply flex flex-col lg:flex-row h-full w-full items-stretch;
  @apply max-w-screen-2xl 2xl:mx-auto;
  animation: fadein 400ms linear;
}

/* .body-decor,
.body-decor--text {
  @apply hidden;
}

@screen 2xl {
  .body-decor {
    @apply fixed inset-0 w-full h-full -z-1;
    @apply filter brightness-50 ;
    background-image: url("https://source.unsplash.com/collection/1459961/1600x900");
    background-size: cover;
    background-repeat: no-repeat;
    background-position: bottom right;
  }
  .body-decor--text {
    @apply absolute right-4 bottom-4 px-4 py-2 rounded;
    @apply bg-gray-900 bg-opacity-20 text-white text-opacity-80 text-xs;
    text-shadow: 0 1px 1px rgba(0,0,0,.2);
  }
  .body-decor--text a {
    @apply hover:text-white hover:text-opacity-100 border-b border-b-white border-opacity-50 hover:border-opacity-100;
  }
} */

/* 
Nav Panels 
*/
.pane-left {
  @apply flex flex-shrink-0 flex-col justify-between h-full;
  @apply border-r border-gray-400 border-opacity-10 z-50;
  /* @apply bg-gray-50 dark:bg-deepgray-200; */
  width: var(--paneleft-width);
  flex-basis: var(--paneleft-width);
}


.pane-left--bottom {
  @apply justify-between items-center p-2 space-y-2;
  .btn {
    @apply w-full justify-start flex-shrink-0;
  }
  .btn.btn-switch-lang {
    @apply justify-between;
  }
  .btn .icon {
    @apply w-px-16;
  }
  .btn .btn--text {
    @apply text-xs;
  }
}

/* 
Navbars on Mobile Tablet
*/
.pane-bottom {
  @apply flex justify-between w-full h-auto order-last;
  @apply bg-bluegray-50 dark:bg-deepgray-50 z-50;
  flex-basis: var(--navbar-height);
}

@media (max-width: 767px) {
  .page-details .pane-bottom {
    @apply hidden; /* Hide Mobile Navbar for more immersive look */
  }
}


/* 
Main Panels
*/
.pane-center {
  @apply flex flex-auto flex-col transition;
  @apply lg:border-r border-gray-400 border-opacity-10 z-50;
}

/* Add Color to Topbar on Mobile and Tablet */
@media (max-width: 1024px) {
  .pane-center {
    @apply bg-gradient-to-r from-primary-50 to-yellow-50 dark:from-primary-800 dark:to-primary-900;
  }
}

.pane-center--top {
  @apply flex flex-shrink-0 mt-0 z-10;
}

.pane-center--main {
  box-shadow: 0 0 8px rgba(0, 0, 0, 0.05);
  @apply flex w-full h-full;
  @apply rounded-t-xl lg:rounded-none lg:shadow-none overflow-hidden;
}

@media (max-width: 1024px) {
  .dark .pane-center--main {
    box-shadow: 0 0 8px rgba(0, 0, 0, 0.5 ); /* Increase shadow on Dark Theme */
  }
}

.pane-content {
  @apply w-full h-full;
}

.pane-content--main {
  @apply relative float-left w-full;
  @apply flex flex-col w-full h-full;
  @apply md:border-r border-gray-100 dark:border-gray-800 dark:border-opacity-90;
}

@screen md {
  .pane-content--main {
    width: var(--main-width);
  }
}

.pane-content--main--top,
.pane-content--sec--top {
  @apply flex px-4 justify-between items-center flex-shrink-0;
  @apply border-b border-gray-400 border-opacity-10;
  @apply bg-white dark:bg-gray-900;
  height: var(--toolbar-height);
}

/* Hide content toolbar on Tablet */
.pane-content--sec--top {
  @apply md:hidden lg:flex;
}

/* Unhide content toolbar when Reading */
.page-details .pane-content--sec--top {
  @apply md:flex;
}

 
/* 
Card List Area
*/
.pane-content--main--main {
  @apply flex flex-auto flex-col w-full h-0;
  @apply bg-white dark:bg-gray-900;
}

@screen lg {
  .pane-content--main--main {
    height: calc(100vh - var(--toolbar-height));
  }
}

/* 
Reader / Page Area
*/
.pane-content--sec {
  @apply float-left w-full z-10;
  @apply hidden flex-auto md:flex flex-col;
}

@screen md {
  .pane-content--sec {
    width:  calc(100% - var(--main-width));
    height: calc(100vh - var(--topbar-height) - var(--topbar-height));
  }
}

@screen lg {
  .pane-content--sec {
    /* width: 55%; */
    @apply h-full;
  }
}

@media (max-width: 768px) {
  .pane-content--sec.pane-content-active {
    @apply fixed flex;
    right: 0;
    top: var(--topbar-height);
    bottom: 0;
  }
}

.pane-content--sec--main {
  @apply w-full h-full;
  @apply bg-white dark:bg-gray-900;
  /* @apply 2xl:bg-opacity-95 2xl:dark:bg-opacity-80 2xl:backdrop-blur; */
}


/* 
Main Layout when scrolling
--------------------------------------------- */
@media (max-width: 767px) {

  .pane-center--top {
    transition: margin-top 150ms linear;
  }

  /* Post Lists */
  .list-away-top {
    .pane-center--main {
      @apply rounded-none;
    }

    .pane-center--top {
      margin-top: calc( -1 * var(--topbar-height));
    }

  }

  /* .pane-content--main--top,
  .pane-content--sec--top {
    transition: all 150ms linear;
    transition-delay: 300ms;
  } */

  .list-away-top,
  .page-details {
    .pane-content--main--top,
    .pane-content--sec--top {
      @apply fixed top-0 inset-x-0 z-50;
      @apply bg-opacity-80 dark:bg-opacity-80 backdrop-blur;
    }
  }

  /* Reader Lists  */
  .list-away-top.page-details,
  .page-details {

    .pane-content--sec.pane-content-active {
      @apply top-0;
    }

    .pane-center--top,
    .pane-content--main--top {
      @apply hidden;
    }

    .pane-content--sec--main {
      padding-top: var(--topbar-height);
    }

  }

}


/* 
Top & Tool Bars
--------------------------------------------- */
.topbar {
  @apply flex lg:hidden justify-between items-center px-4 w-full;
  height: var(--topbar-height);
}

.logo {
  @apply flex items-center justify-center;
}

.navbar .logo {
  @apply hidden lg:flex py-4;
}

.logo--img {
  @apply block w-auto h-10;
}

.topbar .logo--img {
  @apply w-px-24;
}

.logo--text {
  @apply bg-gradient-to-b from-purple-400 to-purple-700 font-semibold;
  @apply dark:from-white dark:to-white;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.logo--badge {
  @apply text-xxxs mt-0.5 opacity-50 border-b-2 border-gray-400 leading-3;
  letter-spacing: 2px;
}

.topbar .logo--badge {
  @apply ml-1.5 -mt-0.5;
}

/* Toolbar */
.pane-content--main--top .search-wrapper {
  @apply mr-2 w-full;
}

.pane-content--main--top .cta-wrapper {
  @apply flex-shrink-0;
}

/* 
Sidebar
--------------------------------------------- */
.sidebar {
  @apply xl:p-4;
}

/* 
Sections Layout
--------------------------------------------- */
.section {
  @apply p-4 md:p-6 xl:px-10 xl:py-6;
}

.section-header {
  @apply flex justify-between;
}

.section-title {
  @apply flex flex-wrap;
  @apply text-sm font-medium
}

.section-title strong {
  @apply font-medium;
  border-bottom: 1px dotted;
}

.section-body {
  @apply pt-4 md:pt-6;
}

.section-footer {
  @apply flex justify-between items-center;
  @apply px-4 py-4 md:px-8 md:py-6;
  @apply border-t border-gray-500 border-opacity-10;
}

.section-cta {
  @apply text-sm font-medium;
  @apply flex mt-0 justify-between items-center;
}

.section-cta .btn {
  @apply text-sm font-normal;
}

.section-cta .btn-group + .btn-group {
  @apply ml-4;
}


/* 
Sections
--------------------------------------------- */
/* 
Media 
*/
.media-player {
}


/* 
Comments List 
*/
.section-comments {
  @apply border-t border-gray-500 border-opacity-10;
}

/* 
Pages
--------------------------------------------- */
/* 
Page Layout
*/
.page {
  @apply w-full h-full relative;
  /* @apply bg-white dark:bg-gray-900; */
}

.page-header {
  @apply md:flex;
}

.page-title {
  @apply text-xl md:text-2xl font-semibold mb-1;
}

.page-back {
  @apply flex items-center pl-0 pr-2 md:pl-2 xl:pl-3;
}

.page-tabs {
  @apply pl-2 md:pl-4 lg:pl-4 xl:pl-12 text-sm;
}

.page-back + .page-tabs {
  @apply pl-3 ml-1 lg:pl-4 lg:ml-3;
  &:before {
    @apply block absolute bg-gray-400 bg-opacity-30;
    content: " ";
    width: 1px;
    height: 50%;
    left: 0;
    top: 28%;
  }
}


/* 
Post Details
--------------- */
.post {
}

.post-header {
  @apply flex flex-col;
}

.post-body {}

.post-detail {
}

/* 
Title 
*/
.post-title h1 {
  .badge {
    @apply relative -top-1;
  }
}

.post-title--text {
  @apply text-gray-800 dark:text-gray-200 transition mr-2;
}

.post-title:hover .post-title--text {
  /* @apply text-primary-700 dark:text-primary-500; */
}

.post-title .btn-post-link {
  @apply relative transition;
  top: -2px;
}

.post-title:hover .btn-post-link {
  @apply text-primary-700 dark:text-primary-500 opacity-100;
}

.post-detail-social .post-title {
  @apply line-clamp-2 overflow-ellipsis;
}

/* 
Metadata 
*/
.post-header .metadata-wrapper {
  @apply text-sm justify-between;
}

.post-header .metadata {
  @apply mt-1 mb-1;
}

.post-header .metadata-source .metadata-value {
  max-width: 160px;
  @apply whitespace-nowrap md:max-w-none overflow-hidden overflow-ellipsis;
}


/* 
CTAs 
*/
.post-detail .cta-wrapper {
  @apply flex text-gray-900 dark:text-gray-200;
}

.post-detail .cta-wrapper .btn {
  @apply text-sm leading-none relative;
}

.post-detail .cta-wrapper .btn-post-vote {
}

/*
Media
*/
.post-media {
  @apply w-full max-h-56 lg:max-h-72 overflow-hidden rounded mt-4;
}

.post-media--img {
  @apply object-cover w-full h-full;
}

.post-detail-media .post-media {
  @apply mt-0 mb-6 max-h-full;
}

/*
Content
*/
.post-content {
}


/* Post Actions */
.post-actions {
  @apply mt-8;
}

/* 
Components
--------------------------------------------- */
/* 
Dialogs 
*/
.dialog-outside-wrapper {
  @apply fixed inset-0 z-50 overflow-y-auto bg-white md:bg-bluegray-50 bg-opacity-100;
  @apply dark:bg-deepgray-100 md:dark:bg-gray-900;
}

.dialog-outside {
  @apply md:px-4 text-center bg-bluegray-50 dark:bg-gray-900;
}

.dialog {
  @apply max-w-2xl lg:max-w-4xl overflow-hidden text-left align-top md:align-middle transition-all transform;
  @apply text-left bg-bluegray-50 dark:bg-gray-900 md:shadow-2xl md:rounded;
}

.dialog-wrapper {
  @apply block lg:flex;
}

.dialog .divider {
  @apply relative my-6 text-center;
}

.dialog .divider::before {
  @apply absolute block w-full bg-gray-500 bg-opacity-20 -z-1;
  content: " ";
  height: 1px;
  bottom: calc(50% - 0.2rem)
}

.dialog .divider span {
  @apply bg-bluegray-50 dark:bg-gray-900 text-xs uppercase z-0 px-4;
}


/* 
Content Loader 
*/
.content-loader {
  @apply p-0;
}

.content-loader svg {
  @apply w-full opacity-50;
}

/* 
Tootips 
*/
.hasTooltip {
  @apply cursor-pointer;
  i {
    @apply ml-0.5 text-base;
  }
}

.__react_component_tooltip {
  @apply max-w-xs shadow-lg backdrop-filter backdrop-blur;
  padding: 4px 8px !important;
  background: #FEF3C7 !important;
  color: #111827 !important;
  font-size: 0.875rem !important;
  &::after {
    border-color: transparent !important;
  }
}


.__react_component_tooltip.show {
}


/*
Perfect Scrollbar
*/
.scrollbar {
  @apply relative overflow-x-hidden overflow-y-visible;
  -webkit-overflow-scrolling: touch;
  /* -ms-overflow-style: none;
  overflow: -moz-scrollbars-none; */
}

.scrollbar::-webkit-scrollbar {
  @apply w-1.5 bg-gray-200 dark:bg-gray-800 bg-opacity-20 dark:bg-opacity-20;
}

.scrollbar::-webkit-scrollbar-track {
  @apply bg-transparent;
}

.scrollbar::-webkit-scrollbar-thumb {
  @apply bg-gray-300 dark:bg-gray-800 bg-opacity-40 transition-all;
  border-radius: 18px;
}

.scrollbar::-webkit-scrollbar-thumb:hover {
  @apply bg-primary-500;
}


/* 
Uitilities 
*/
.no-padding {
  @apply p-0;
}

.no-padding-t {
  @apply pt-0;
}

.hidden {
  display: none;
}

.disabled {
  @apply opacity-50 pointer-events-none;
}

.nav-item.disabled {
  @apply opacity-20;
}

.search-not-found{
  @apply flex justify-center my-8;
}

 
/* 
Dragger  
*/
.pane-dragger {
  @apply hidden md:block absolute h-full w-2 -right-2 top-0 z-50;
  @apply border-l-2 border-dashed border-transparent hover:border-primary-500 transition;
  transition-delay: 0.2s;
  cursor: col-resize;
}

.pane-dragger.dragging {
  user-select: none;
}

